{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 105,
  "lineage": "a4ff502f-99be-50fa-ab6b-5ec718218a2a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:security-group/sg-057f1dc52d370e1fd",
            "description": "Used for RDS instances",
            "egress": [],
            "id": "sg-057f1dc52d370e1fd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce432750eb37070c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "DB_rds_sg",
            "name_prefix": "",
            "owner_id": "478551651381",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "aws_security_group.LB_public_sg",
            "aws_security_group.webserver_ec2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "LB_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:security-group/sg-0202353a715e4e5dc",
            "description": "Used for the elb for public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0202353a715e4e5dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "LB_public_sg",
            "name_prefix": "",
            "owner_id": "478551651381",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:security-group/sg-0b093abfb374a96e5",
            "description": "Used for EFS storage",
            "egress": [],
            "id": "sg-0b093abfb374a96e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce432750eb37070c"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "478551651381",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "aws_security_group.webserver_ec2",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:security-group/sg-0ce432750eb37070c",
            "description": "Access to ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ce432750eb37070c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0202353a715e4e5dc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver_ec2",
            "name_prefix": "",
            "owner_id": "478551651381",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "aws_security_group.LB_public_sg",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:loadbalancer/app/alb-unicorn/52114246f1d58948",
            "arn_suffix": "app/alb-unicorn/52114246f1d58948",
            "dns_name": "alb-unicorn-673865816.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:478551651381:loadbalancer/app/alb-unicorn/52114246f1d58948",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-unicorn",
            "security_groups": [
              "sg-0202353a715e4e5dc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0178951a5c111de69"
              },
              {
                "subnet_id": "subnet-0c2f9a21cef4eb04d"
              },
              {
                "subnet_id": "subnet-0c48052ac90eea138"
              }
            ],
            "subnets": [
              "subnet-0178951a5c111de69",
              "subnet-0c2f9a21cef4eb04d",
              "subnet-0c48052ac90eea138"
            ],
            "tags": {
              "Name": "alb-unicorn",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-03d10dea26915c299",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.LB_public_sg",
            "module.vpc.aws_subnet.public"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:listener/app/alb-unicorn/52114246f1d58948/e4e5f4c1c46c6f73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:478551651381:listener/app/alb-unicorn/52114246f1d58948/e4e5f4c1c46c6f73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:loadbalancer/app/alb-unicorn/52114246f1d58948",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:listener/app/alb-unicorn/52114246f1d58948/099618fcfd35ddad",
            "certificate_arn": "arn:aws:acm:us-west-2:478551651381:certificate/f8e8d173-1db3-4ac2-ac1f-87947772f368",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:targetgroup/web-20200908091849252900000001/724b0f3191f8ce1b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:478551651381:listener/app/alb-unicorn/52114246f1d58948/099618fcfd35ddad",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:loadbalancer/app/alb-unicorn/52114246f1d58948",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "dependencies": [
            "data.aws_acm_certificate.issued",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:478551651381:targetgroup/web-20200908091849252900000001/724b0f3191f8ce1b",
            "arn_suffix": "targetgroup/web-20200908091849252900000001/724b0f3191f8ce1b",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:478551651381:targetgroup/web-20200908091849252900000001/724b0f3191f8ce1b",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-20200908091849252900000001",
            "name_prefix": "web-",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-",
              "Terraform": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "aws_security_group.LB_public_sg",
            "module.alb.aws_lb.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-05cc768f442928759",
            "domain": "vpc",
            "id": "eipalloc-069181e60cdf7daa4",
            "network_interface": "eni-05fbd64b90b556b03",
            "private_dns": "ip-10-0-11-190.us-west-2.compute.internal",
            "private_ip": "10.0.11.190",
            "public_dns": "ec2-44-224-187-53.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.187.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "unicor_vpc-us-west-2a",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:internet-gateway/igw-03f8bbca82a029940",
            "id": "igw-03f8bbca82a029940",
            "owner_id": "478551651381",
            "tags": {
              "Name": "unicor_vpc",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069181e60cdf7daa4",
            "id": "nat-0b01b131a53a9ae17",
            "network_interface_id": "eni-05fbd64b90b556b03",
            "private_ip": "10.0.11.190",
            "public_ip": "44.224.187.53",
            "subnet_id": "subnet-0178951a5c111de69",
            "tags": {
              "Name": "unicor_vpc-us-west-2a",
              "Project": "Unicor",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e8daec27eb5053a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b01b131a53a9ae17",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03f8bbca82a029940",
            "id": "r-rtb-017b39f7696abd35e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017b39f7696abd35e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-012f209c7743cf4e9",
            "owner_id": "478551651381",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "unicor_vpc-intra",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09e8daec27eb5053a",
            "owner_id": "478551651381",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b01b131a53a9ae17",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-017b39f7696abd35e",
            "owner_id": "478551651381",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f8bbca82a029940",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511ab3bedcc83e5b",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-0f11309183e626195"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087561faa2935c0b2",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-00ff6c45219d5a4fa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed3e6645e0cc0a4e",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-0082304f4f028b02a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5daf87181c319f9",
            "route_table_id": "rtb-012f209c7743cf4e9",
            "subnet_id": "subnet-0b243655492f0ba6b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff9a5038dad605ed",
            "route_table_id": "rtb-012f209c7743cf4e9",
            "subnet_id": "subnet-0e0c66391737db4ac"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0908c76824678d0a6",
            "route_table_id": "rtb-012f209c7743cf4e9",
            "subnet_id": "subnet-00debccebd4bad427"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceeac3c1c6ec2896",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-02cbf4b92390c9055"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d3b554a75f3ea1",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-06b5ed1dddf63e0a9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02069d78575fd2ea3",
            "route_table_id": "rtb-09e8daec27eb5053a",
            "subnet_id": "subnet-0679ce195cc275ebf"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b01e8fd11ee59ec3",
            "route_table_id": "rtb-017b39f7696abd35e",
            "subnet_id": "subnet-0178951a5c111de69"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ef31307c47d99e7",
            "route_table_id": "rtb-017b39f7696abd35e",
            "subnet_id": "subnet-0c2f9a21cef4eb04d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08775dbcb3386f0d5",
            "route_table_id": "rtb-017b39f7696abd35e",
            "subnet_id": "subnet-0c48052ac90eea138"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0f11309183e626195",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.31.0/24",
            "id": "subnet-0f11309183e626195",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "db_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-00ff6c45219d5a4fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.32.0/24",
            "id": "subnet-00ff6c45219d5a4fa",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "db_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0082304f4f028b02a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.33.0/24",
            "id": "subnet-0082304f4f028b02a",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "db_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0b243655492f0ba6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.41.0/24",
            "id": "subnet-0b243655492f0ba6b",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "intra_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0e0c66391737db4ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.42.0/24",
            "id": "subnet-0e0c66391737db4ac",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "intra_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-00debccebd4bad427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.43.0/24",
            "id": "subnet-00debccebd4bad427",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "intra_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-02cbf4b92390c9055",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.21.0/24",
            "id": "subnet-02cbf4b92390c9055",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "private_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-06b5ed1dddf63e0a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.22.0/24",
            "id": "subnet-06b5ed1dddf63e0a9",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "private_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0679ce195cc275ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.23.0/24",
            "id": "subnet-0679ce195cc275ebf",
            "map_public_ip_on_launch": false,
            "owner_id": "478551651381",
            "tags": {
              "Name": "private_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0178951a5c111de69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0178951a5c111de69",
            "map_public_ip_on_launch": true,
            "owner_id": "478551651381",
            "tags": {
              "Name": "public_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0c2f9a21cef4eb04d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0c2f9a21cef4eb04d",
            "map_public_ip_on_launch": true,
            "owner_id": "478551651381",
            "tags": {
              "Name": "public_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:subnet/subnet-0c48052ac90eea138",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.13.0/24",
            "id": "subnet-0c48052ac90eea138",
            "map_public_ip_on_launch": true,
            "owner_id": "478551651381",
            "tags": {
              "Name": "public_subnet",
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:vpc/vpc-03d10dea26915c299",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04650791adff265f9",
            "default_route_table_id": "rtb-0f3b2002ced38d457",
            "default_security_group_id": "sg-071bea43b6a27f614",
            "dhcp_options_id": "dopt-4d30e135",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03d10dea26915c299",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f3b2002ced38d457",
            "owner_id": "478551651381",
            "tags": {
              "Name": "unicor_vpc",
              "Project": "Unicor",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:478551651381:vpc-endpoint/vpce-0c0401fccfc8c3db5",
            "cidr_blocks": [
              "52.218.128.0/17"
            ],
            "id": "vpce-0c0401fccfc8c3db5",
            "owner_id": "478551651381",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-012f209c7743cf4e9",
              "rtb-017b39f7696abd35e",
              "rtb-09e8daec27eb5053a"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Project": "Unicor",
              "Terraform": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03d10dea26915c299"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.data.aws_vpc_endpoint_service.s3"
          ]
        }
      ]
    }
  ]
}